<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="title_text">My Nanodegree Apps!</string>
    
    <string name="title_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="title_scores_app">FOOTBALL SCORES APP</string>
    <string name="title_library_app">LIBRARY APP</string>
    <string name="title_build_it_bigger">BUILD IT BIGGER</string>
    <string name="title_xyz_reader">XYZ READER</string>
    <string name="title_capstone">CAPSTONE</string>
</resources>
