<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:background="#ffdfeaf1">

    <TextView
        android:id="@+id/my_title"
        android:text="@string/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"/>

    <Button
        android:id="@+id/spotify_streamer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_title"
        android:layout_marginTop="30dp"
        android:text="@string/title_spotify_streamer"
        android:background="#F08C35"/>

    <Button
        android:id="@+id/scores_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spotify_streamer"
        android:text="@string/title_scores_app"
        style="@style/MainScreenOrangeBtn"/>

    <Button
        android:id="@+id/library_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scores_app"
        android:text="@string/title_library_app"
        style="@style/MainScreenOrangeBtn"/>

    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/library_app"
        android:text="@string/title_build_it_bigger"
        style="@style/MainScreenOrangeBtn"/>

    <Button
        android:id="@+id/xyz_reader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/build_it_bigger"
        android:text="@string/title_xyz_reader"
        style="@style/MainScreenOrangeBtn"/>

    <Button
        android:id="@+id/capstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xyz_reader"
        android:text="@string/title_capstone"
        style="@style/MainScreenPinkBtn"/>

</RelativeLayout>
